# product-api-site

./: .dockerignore  .env.example  .env.production  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  SUPABASE_MIGRATION_SUMMARY.md  TEST_CREDENTIALS.md  amazon-product-intelligence-platform-prd.md  app.db  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  product_platform.db  pyproject.toml  pytest.ini  requirements.txt  test.db  test_login.json  test_register.json
PRPs/: admin_dashboard_system.md  amazon-product-intelligence-platform-implementation.md  amazon-product-intelligence-platform-unified.md  amazon-product-intelligence-platform.md  checklist.md  homepage-landing-page.md
PRPs/ai_docs/: fastapi_production_patterns.md  stripe_credit_system_patterns.md
PRPs/templates/: full_project_blueprint.md
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_remove_supabase_add_password.py  003_add_admin_dashboard_system_tables.py  004_fix_credit_transactions_autoincrement.py
app/: main.py
app/api/: deps.py
app/api/v1/endpoints/: auth.py  conversion.py  credits.py  jobs.py  monitoring.py  payments.py  products.py  users.py
app/api/v1/endpoints/admin/: system.py  users.py
app/core/: config.py  database.py  exception_handlers.py  exceptions.py  logging_config.py  queue.py  security.py
app/middleware/: __init__.py  admin_auth.py
app/models/: models.py
app/monitoring/: __init__.py  metrics.py
app/schemas/: admin.py  auth.py  conversion.py  credits.py  jobs.py  monitoring.py  products.py
app/services/: admin_service.py  amazon_service.py  audit_service.py  credit_service.py  export_service.py  fnsku_service.py  input_detection_service.py  monitoring_service.py  notification_service.py  payment_service.py  security_monitoring_service.py
app/tests/: __init__.py  conftest.py  test_auth.py  test_conversion.py  test_credits.py  test_main.py  test_products.py
app/workers/: bulk_processor.py  daemon.py  monitoring_daemon.py
frontend/: FRONTEND_README.md  LOCAL_SETUP.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: clear-auth.html
frontend/src/: App.tsx
frontend/src/components/: AdminRoute.tsx  DataVisualizationTabs.tsx  ErrorBoundary.tsx  JsonView.tsx  Layout.tsx  LoadingSpinner.tsx  LoginForm.tsx  ProtectedRoute.tsx  RegisterForm.tsx  SchemaView.tsx  TableView.tsx  TrialSignupForm.tsx
frontend/src/contexts/: AdminContext.tsx  AuthContext.tsx
frontend/src/pages/: AdminDashboard.tsx  Analytics.tsx  CreditManagement.tsx  Dashboard.tsx  FNSKUConverter.tsx  Homepage.tsx  PriceMonitoring.tsx  ProductQuery.tsx
frontend/src/types/: auth.ts
monitoring/grafana/dashboards/: api-metrics.json
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/prometheus/: alert_rules.yml  prometheus.yml
nginx/: nginx.conf
nginx/sites-enabled/: api.conf
scripts/: seed_database.py
